# LmcpGen

src/templates/cpp/: meson.build
